--- a/team.html
+++ b/team.html
@@ -10,7 +10,7 @@
 <body>
     <header class="navbar">
         <div class="container nav-flex">
-            <div class="logo">Sinder<span>Lab</span></div>
+            <a href="index.html" class="logo">Sinder<span>Lab</span></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -27,18 +27,42 @@
     <main class="container page-content">
         <h2 class="section-title">Our Team</h2>
         
-        <div class="team-section">
-            <h3 class="role-title">Principal Investigator</h3>
-            <div class="member-card">
-                <strong>Dr. Sinder</strong>
-                <p>Assistant Professor, Department of Orthopaedics</p>
+        <section class="pi-section">
+            <div class="pi-card">
+                <div class="member-image pi-img">PI Photo</div>
+                <div class="member-info">
+                    <h3 class="member-name">Dr. [Your Name]</h3>
+                    <p class="member-title">Principal Investigator | Assistant Professor of Orthopaedics</p>
+                    <p class="member-bio">Dr. Sinder leads the lab's research into [specific area]. With a background in [Education/Training], they are dedicated to advancing clinical outcomes in orthopaedic surgery.</p>
+                </div>
+            </div>
+        </section>
+
+        <h3 class="role-title">Lab Members</h3>
+
+        <div class="team-grid">
+            <div class="team-card">
+                <div class="member-image">Photo</div>
+                <h4 class="member-name">[Name]</h4>
+                <p class="member-role">Postdoctoral Fellow</p>
+                <p class="member-desc">Briefly describe their research focus or specialty here.</p>
             </div>
 
-            <h3 class="role-title">Research Staff & Residents</h3>
-            <div class="member-card"><strong>[Name]</strong> — Orthopedic Resident</div>
-            <div class="member-card"><strong>[Name]</strong> — Lab Manager</div>
-            <div class="member-card"><strong>[Name]</strong> — Research Assistant</div>
-        </div>
-    </main>
-</body>
-</html>
+            <div class="team-card">
+                <div class="member-image">Photo</div>
+                <h4 class="member-name">[Name]</h4>
+                <p class="member-role">PhD Student</p>
+                <p class="member-desc">Description of their background and project involvement.</p>
+            </div>
+
+            <div class="team-card">
+                <div class="member-image">Photo</div>
+                <h4 class="member-name">[Name]</h4>
+                <p class="member-role">Research Resident</p>
+                <p class="member-desc">Details regarding their surgical specialty and research focus.</p>
+            </div>
+
+            <div class="team-card">
+                <div class="member-image">Photo</div>
+                <h4 class="member-name">[Name]</h4>
+                <p class="member-role">Medical Student</p>
