--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
     <header class="navbar">
         <div class="container nav-flex">
-            <div class="logo">Sinder<span>Lab</span></div>
+            <a href="index.html" class="logo">Sinder<span>Lab</span></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -31,30 +31,32 @@
             <div class="contact-info">
                 <h3>Lab Location</h3>
                 <p>
-                    <strong>Department of Orthopaedics</strong><br>
-                    University Hospital, North Wing<br>
-                    Suite 402<br>
-                    123 Medical Center Way<br>
-                    City, State, Zip
+                    <strong>UConn Health Musculoskeletal Institute</strong><br>
+                    120 Dowling Way<br>
+                    Farmington, CT 06030
                 </p>
 
-                <h3>Mailing Address</h3>
+                <h3>Mailing & Shipping Address</h3>
                 <p>
-                    Attn: Dr. Sinder<br>
-                    P.O. Box 987654<br>
-                    City, State, Zip
+                    Attn: Benjamin Sinder<br>
+                    Room: MARB Main Lab (Bay 29)<br>
+                    Dept: Orthopaedic Surgery<br>
+                    W Recv Dock<br>
+                    263 Farmington Ave<br>
+                    Farmington, CT 06030<br>
+                    United States
                 </p>
 
                 <h3>Digital</h3>
                 <p>
-                    <strong>Email:</strong> <a href="mailto:sinderlab@university.edu">sinderlab@university.edu</a><br>
-                    <strong>Twitter:</strong> <a href="https://twitter.com">@SinderLab</a>
+                    <strong>Email:</strong><br>
+                    <img src="email_address.png" alt="Email Address" style="display: block; margin-top: 5px; height: 20px;">
                 </p>
             </div>
 
             <div class="contact-map">
                 <div class="map-placeholder">
-                    <span>Map/Building Photo Placeholder</span>
+                    <span>UConn Health MSI<br>120 Dowling Way</span>
                 </div>
             </div>
         </div>
@@ -67,7 +69,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2026 Sinder Lab | Department of Orthopaedics</p>
+            <p>&copy; 2026 Sinder Lab | UConn Health Department of Orthopaedic Surgery</p>
         </div>
     </footer>
 </body>
