--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,13 @@
             <div class="contact-info">
                 <h3>Lab Location</h3>
                 <p>
-                    <strong>UConn Health Musculoskeletal Institute</strong><br>
+                    UConn Health Musculoskeletal Institute<br>
                     120 Dowling Way<br>
                     Farmington, CT 06030
+                </p>
+
+                <p>
+                    <a href="https://maps.app.goo.gl/39mG691W1M66y3Xq8" target="_blank" style="font-size: 0.85rem; color: var(--accent); text-decoration: none;">View on Google Maps →</a>
                 </p>
 
                 <h3>Mailing & Shipping Address</h3>
@@ -47,9 +51,8 @@
                     United States
                 </p>
 
-                <h3>Digital</h3>
+                <h3 style="margin-top: 30px;">Email:</h3>
                 <p>
-                    <strong>Email:</strong><br>
                     <img src="email_address.png" alt="Email Address" style="display: block; margin-top: 5px; height: 20px;">
                 </p>
             </div>
@@ -63,13 +66,12 @@
 
         <section class="join-us">
             <h3>Prospective Students & Residents</h3>
-            <p>We are always looking for motivated researchers to join the Sinder Lab. Please email your CV and a brief statement of interest to Dr. Sinder.</p>
-        </section>
+            </section>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2026 Sinder Lab | UConn Health Department of Orthopaedic Surgery</p>
+            <p>© 2026 Sinder Lab | UConn Health Department of Orthopaedic Surgery</p>
         </div>
     </footer>
 </body>
