--- a/publications.html
+++ b/publications.html
@@ -10,7 +10,7 @@
 <body>
     <header class="navbar">
         <div class="container nav-flex">
-            <div class="logo">Sinder<span>Lab</span></div>
+            <a href="index.html" class="logo">Sinder<span>Lab</span></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -25,18 +25,31 @@
     </header>
 
     <main class="container page-content">
-        <h2 class="section-title">Selected Publications</h2>
-        
-        <div class="pub-list">
-            <div class="pub-entry">
-                <span class="year-badge">2025</span>
-                <p><strong>Sinder, J.</strong>, et al. "Advancements in Orthopaedic Biomechanics." <em>Journal of Bone and Joint Surgery</em>. <a href="#">[DOI Link]</a></p>
-            </div>
-            <div class="pub-entry">
-                <span class="year-badge">2024</span>
-                <p><strong>Sinder, J.</strong>, et al. "Clinical Outcomes of Robotic Surgery." <em>Arthroplasty Today</em>. <a href="#">[Full Text]</a></p>
-            </div>
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 30px; border-bottom: 2px solid #edf2f7; padding-bottom: 10px;">
+            <h2 style="margin: 0; font-size: 1.6rem; color: var(--primary);">Publications</h2>
+            
+            <a href="https://scholar.google.com/citations?user=LqYNGrAAAAAJ&hl=en" target="_blank" class="scholar-btn">
+                View on Google Scholar →
+            </a>
         </div>
+
+        <div class="publications-list">
+            <div class="pub-entry">
+                <div class="year-badge">2020</div>
+                <div class="pub-details">
+                    <p class="pub-title">Engraftment of skeletal progenitor cells by bone-directed transplantation improves osteogenesis imperfecta murine bone phenotype.</p>
+                    <p class="pub-authors">BP Sinder, S Novak, NKY Wee, M Basile, P Maye, BG Matthews, I Kalajzic.</p>
+                    <p class="pub-journal"><em>Stem Cells</em>, 38(4), 530-541.</p>
+                </div>
+            </div>
+
+            </div>
     </main>
+
+    <footer>
+        <div class="container">
+            <p>© 2026 Sinder Lab | UConn Health Department of Orthopaedic Surgery</p>
+        </div>
+    </footer>
 </body>
 </html>
