--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                 </p>
 
                 <p>
-                    <a href="https://www.google.com/maps/contrib/107308644510893966229/reviews" target="_blank" style="font-size: 0.85rem; color: var(--accent); text-decoration: none;">View on Google Maps →</a>
+                    <a href="http://googleusercontent.com/maps.google.com/7" target="_blank" style="font-size: 0.85rem; color: var(--accent); text-decoration: none;">View on Google Maps →</a>
                 </p>
 
                 <h3>Mailing & Shipping Address</h3>
@@ -58,13 +58,13 @@
             </div>
 
             <div class="contact-map">
-                <div class="map-placeholder">
-                    </div>
+                <div class="map-placeholder"></div>
             </div>
         </div>
 
         <section class="join-us">
             <h3>Prospective Students & Residents</h3>
+            <p>We are always looking for motivated researchers to join the Sinder Lab at UConn Health. Please email your CV and a brief statement of interest to Dr. Sinder at the address shown above.</p>
         </section>
     </main>
 
