--- a/publications.html
+++ b/publications.html
@@ -35,32 +35,42 @@
         <div class="publications-list">
             
             <div class="pub-entry-tight">
+                <p class="pub-title-blue">Parathyroid hormone and trabectedin have differing effects on macrophages and stress fracture repair</p>
                 <p>
-                    Parathyroid hormone and trabectedin have differing effects on macrophages and stress fracture repair. Zweifler LE, <strong>Sinder BP</strong>, Sisson JA, Deegan AM, Scheller KM, McCauley LK. <em>Bone</em>. <a href="https://pubmed.ncbi.nlm.nih.gov/37923249/" target="_blank">PubMed</a>. 2024.
+                    Zweifler LE, <strong>Sinder BP</strong>, Sisson JA, Deegan AM, Scheller KM, McCauley LK. <em>Bone</em>. 2024.<br>
+                    <a href="https://pubmed.ncbi.nlm.nih.gov/37923249/" target="_blank">PubMed</a>
                 </p>
             </div>
 
             <div class="pub-entry-tight">
+                <p class="pub-title-blue">Engraftment of skeletal progenitor cells by bone-directed transplantation improves osteogenesis imperfecta murine bone phenotype</p>
                 <p>
-                    Engraftment of skeletal progenitor cells by bone-directed transplantation improves osteogenesis imperfecta murine bone phenotype. <strong>Sinder BP</strong>, Novak S, Wee NKY, Basile M, Maye P, Matthews BG, Kalajzic I. <em>Stem Cells</em>. <a href="https://pubmed.ncbi.nlm.nih.gov/31872957/" target="_blank">PubMed</a>. 2020.
+                    <strong>Sinder BP</strong>, Novak S, Wee NKY, Basile M, Maye P, Matthews BG, Kalajzic I. <em>Stem Cells</em>. 2020.<br>
+                    <a href="https://pubmed.ncbi.nlm.nih.gov/31872957/" target="_blank">PubMed</a>
                 </p>
             </div>
 
             <div class="pub-entry-tight">
+                <p class="pub-title-blue">Bone mass is compromised by the chemotherapeutic trabectedin in association with effects on osteoblasts and macrophage efferocytosis</p>
                 <p>
-                    Bone mass is compromised by the chemotherapeutic trabectedin in association with effects on osteoblasts and macrophage efferocytosis. <strong>Sinder BP</strong>, Pettit AR, McCauley LK. <em>Journal of Bone and Mineral Research</em>. <a href="https://pubmed.ncbi.nlm.nih.gov/28543719/" target="_blank">PubMed</a>. 2017.
+                    <strong>Sinder BP</strong>, Pettit AR, McCauley LK. <em>Journal of Bone and Mineral Research</em>. 2017.<br>
+                    <a href="https://pubmed.ncbi.nlm.nih.gov/28543719/" target="_blank">PubMed</a>
                 </p>
             </div>
 
             <div class="pub-entry-tight">
+                <p class="pub-title-blue">Effect of anti-sclerostin therapy and osteogenesis imperfecta on tissue-level properties in growing and adult mice while controlling for tissue age</p>
                 <p>
-                    Effect of anti-sclerostin therapy and osteogenesis imperfecta on tissue-level properties in growing and adult mice while controlling for tissue age. <strong>Sinder BP</strong>, Lloyd AA, Salemi JD, Marini JC, Caird MS, Morris MD, Kozloff KM. <em>Bone</em>. <a href="https://pubmed.ncbi.nlm.nih.gov/26774618/" target="_blank">PubMed</a>. 2016.
+                    <strong>Sinder BP</strong>, Lloyd AA, Salemi JD, Marini JC, Caird MS, Morris MD, Kozloff KM. <em>Bone</em>. 2016.<br>
+                    <a href="https://pubmed.ncbi.nlm.nih.gov/26774618/" target="_blank">PubMed</a>
                 </p>
             </div>
 
             <div class="pub-entry-tight">
+                <p class="pub-title-blue">Rapidly growing Brtl/+ mouse model of osteogenesis imperfecta improves bone mass and strength with sclerostin antibody treatment</p>
                 <p>
-                    Rapidly growing Brtl/+ mouse model of osteogenesis imperfecta improves bone mass and strength with sclerostin antibody treatment. <strong>Sinder BP</strong>, Salemi JD, Ominsky MS, Caird MS, Marini JC, Kozloff KM. <em>Bone</em>. <a href="https://pubmed.ncbi.nlm.nih.gov/25445448/" target="_blank">PubMed</a>. 2015.
+                    <strong>Sinder BP</strong>, Salemi JD, Ominsky MS, Caird MS, Marini JC, Kozloff KM. <em>Bone</em>. 2015.<br>
+                    <a href="https://pubmed.ncbi.nlm.nih.gov/25445448/" target="_blank">PubMed</a>
                 </p>
             </div>
 
