--- a/publications.html
+++ b/publications.html
@@ -35,7 +35,7 @@
         <div class="publications-list">
             
             <div class="pub-entry-tight">
-                <div class="pub-title-grey">Parathyroid hormone and trabectedin have differing effects on macrophages and stress fracture repair</div>
+                <div class="pub-title-grey"><strong>Parathyroid hormone and trabectedin have differing effects on macrophages and stress fracture repair</strong></div>
                 <div class="pub-citation">
                     Zweifler LE, <strong>Sinder BP</strong>, Sisson JA, Deegan AM, Scheller KM, McCauley LK. <em>Bone</em>. 2024.<br>
                     <a href="https://pubmed.ncbi.nlm.nih.gov/37923249/" target="_blank" class="pubmed-link">PubMed</a>
@@ -43,7 +43,7 @@
             </div>
 
             <div class="pub-entry-tight">
-                <div class="pub-title-grey">Engraftment of skeletal progenitor cells by bone-directed transplantation improves osteogenesis imperfecta murine bone phenotype</div>
+                <div class="pub-title-grey"><strong>Engraftment of skeletal progenitor cells by bone-directed transplantation improves osteogenesis imperfecta murine bone phenotype</strong></div>
                 <div class="pub-citation">
                     <strong>Sinder BP</strong>, Novak S, Wee NKY, Basile M, Maye P, Matthews BG, Kalajzic I. <em>Stem Cells</em>. 2020.<br>
                     <a href="https://pubmed.ncbi.nlm.nih.gov/31872957/" target="_blank" class="pubmed-link">PubMed</a>
@@ -51,7 +51,7 @@
             </div>
 
             <div class="pub-entry-tight">
-                <div class="pub-title-grey">Bone mass is compromised by the chemotherapeutic trabectedin in association with effects on osteoblasts and macrophage efferocytosis</div>
+                <div class="pub-title-grey"><strong>Bone mass is compromised by the chemotherapeutic trabectedin in association with effects on osteoblasts and macrophage efferocytosis</strong></div>
                 <div class="pub-citation">
                     <strong>Sinder BP</strong>, Pettit AR, McCauley LK. <em>Journal of Bone and Mineral Research</em>. 2017.<br>
                     <a href="https://pubmed.ncbi.nlm.nih.gov/28543719/" target="_blank" class="pubmed-link">PubMed</a>
@@ -59,7 +59,7 @@
             </div>
 
             <div class="pub-entry-tight">
-                <div class="pub-title-grey">Effect of anti-sclerostin therapy and osteogenesis imperfecta on tissue-level properties in growing and adult mice while controlling for tissue age</div>
+                <div class="pub-title-grey"><strong>Effect of anti-sclerostin therapy and osteogenesis imperfecta on tissue-level properties in growing and adult mice while controlling for tissue age</strong></div>
                 <div class="pub-citation">
                     <strong>Sinder BP</strong>, Lloyd AA, Salemi JD, Marini JC, Caird MS, Morris MD, Kozloff KM. <em>Bone</em>. 2016.<br>
                     <a href="https://pubmed.ncbi.nlm.nih.gov/26774618/" target="_blank" class="pubmed-link">PubMed</a>
@@ -67,7 +67,7 @@
             </div>
 
             <div class="pub-entry-tight">
-                <div class="pub-title-grey">Rapidly growing Brtl/+ mouse model of osteogenesis imperfecta improves bone mass and strength with sclerostin antibody treatment</div>
+                <div class="pub-title-grey"><strong>Rapidly growing Brtl/+ mouse model of osteogenesis imperfecta improves bone mass and strength with sclerostin antibody treatment</strong></div>
                 <div class="pub-citation">
                     <strong>Sinder BP</strong>, Salemi JD, Ominsky MS, Caird MS, Marini JC, Kozloff KM. <em>Bone</em>. 2015.<br>
                     <a href="https://pubmed.ncbi.nlm.nih.gov/25445448/" target="_blank" class="pubmed-link">PubMed</a>
