--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
             <div class="pub-entry-tight">
                 <div class="pub-title-grey"><strong>Parathyroid hormone and trabectedin have differing effects on macrophages and stress fracture repair</strong></div>
                 <div class="pub-citation">
-                    Zweifler LE, <strong>Sinder BP</strong>, Stephan C, Koh AJ, Do J, Ulrich E, Grewal Jobanpreet,  Woo Cecilia, Batoon L, Kozloff KM, Roca H, Mishina Y, McCauley LK <em>Bone</em>. 2024.<br>
+                    Zweifler LE, <strong>Sinder BP</strong>, Stephan C, Koh AJ, Do J, Ulrich E, Jobanpreet G, Woo C, Batoon L, Kozloff KM, Roca H, Mishina Y, McCauley LK. <em>Bone</em>. 2024.<br>
                     <a href="https://pubmed.ncbi.nlm.nih.gov/38013019/" target="_blank" class="pubmed-link">PubMed</a>
                 </div>
             </div>
@@ -53,7 +53,7 @@
             <div class="pub-entry-tight">
                 <div class="pub-title-grey"><strong>Bone mass is compromised by the chemotherapeutic trabectedin in association with effects on osteoblasts and macrophage efferocytosis</strong></div>
                 <div class="pub-citation">
-                    <strong>Sinder BP</strong>, Zweifler L, Koh AJ, Michalski MN, Hofbauer LC, Aguirre JI, Roca H, McCauley LK  <em>Journal of Bone and Mineral Research</em>. 2017.<br>
+                    <strong>Sinder BP</strong>, Zweifler L, Koh AJ, Michalski MN, Hofbauer LC, Aguirre JI, Roca H, McCauley LK.  <em>Journal of Bone and Mineral Research</em>. 2017.<br>
                     <a href="https://pubmed.ncbi.nlm.nih.gov/28600866/" target="_blank" class="pubmed-link">PubMed</a>
                 </div>
             </div>
