--- a/team.html
+++ b/team.html
@@ -29,7 +29,7 @@
         
         <section class="pi-section">
             <div class="pi-card">
-                <img src="headshot_sinder.jpg" alt="Dr. Benjamin Sinder" class="member-image pi-img" style="width: 220px; height: 280px;">
+                <img src="headshot_sinder.jpg" alt="Dr. Benjamin Sinder" class="member-image pi-img">
                 
                 <div class="member-info">
                     <h3 class="member-name">Dr. Benjamin Sinder</h3>
@@ -47,21 +47,21 @@
 
         <div class="team-grid">
             <div class="team-card">
-                <div class="member-image">Photo</div>
-                <h4 class="member-name">[Name]</h4>
+                <img src="JennyAlaska_Headshot_compress.jpeg" alt="Jenny Alaska" class="member-image">
+                <h4 class="member-name">Jenny Alaska</h4>
                 <p class="member-role">Postdoctoral Fellow</p>
-                <p class="member-desc">Briefly describe their research focus or specialty here.</p>
+                <p class="member-desc">Researching skeletal regeneration and the molecular mechanisms of fracture repair.</p>
             </div>
 
             <div class="team-card">
-                <div class="member-image">Photo</div>
+                <div class="member-image" style="display: flex; align-items: center; justify-content: center; background: #edf2f7; color: #a0aec0; font-weight: 600;">Photo</div>
                 <h4 class="member-name">[Name]</h4>
                 <p class="member-role">PhD Student</p>
                 <p class="member-desc">Description of their background and project involvement.</p>
             </div>
 
             <div class="team-card">
-                <div class="member-image">Photo</div>
+                <div class="member-image" style="display: flex; align-items: center; justify-content: center; background: #edf2f7; color: #a0aec0; font-weight: 600;">Photo</div>
                 <h4 class="member-name">[Name]</h4>
                 <p class="member-role">Research Resident</p>
                 <p class="member-desc">Details regarding their surgical specialty and research focus.</p>
