--- a/team.html
+++ b/team.html
@@ -54,10 +54,10 @@
             </div>
 
             <div class="team-card">
-                <div class="member-image" style="display: flex; align-items: center; justify-content: center; background: #edf2f7; color: #a0aec0; font-weight: 600;">Photo</div>
-                <h4 class="member-name">[Name]</h4>
+                <img src="anthonyzuo_headshot.jpg" alt="Anthony Zuo" class="member-image">
+                <h4 class="member-name">Anthony Zuo</h4>
                 <p class="member-role">PhD Student</p>
-                <p class="member-desc">Description of their background and project involvement.</p>
+                <p class="member-desc">Focusing on biomechanical modeling and computational analysis of orthopaedic outcomes.</p>
             </div>
 
             <div class="team-card">
