--- a/team.html
+++ b/team.html
@@ -50,14 +50,14 @@
                 <img src="JennyAlaska_Headshot_compress.jpeg" alt="Jenny Alaska" class="member-image">
                 <h4 class="member-name">Jenny Alaska</h4>
                 <p class="member-role">HRP Fellow</p>
-                <p class="member-desc">Researching skeletal regeneration and the molecular mechanisms of fracture repair.</p>
+                <p class="member-desc">Jenny is a UConn Biomedical Engineering Student in the Honors Program and grew up in southern Connecticut!</p>
             </div>
 
             <div class="team-card">
                 <img src="anthonyzuo_headshot.jpg" alt="Anthony Zuo" class="member-image">
                 <h4 class="member-name">Anthony Zuo</h4>
                 <p class="member-role">PhD Student</p>
-                <p class="member-desc">Anthony is a UConn XXX major and comes to us from the San Francisco Bay Area!  Whether it is 30F or 30C, he is wearing the same clothing.  Anthony is has a strong interest in rare diseases and works on projects related to osteogenesis imperfecta and characterizing skeletal growth.  Anthony is also an RA on campus, working on his Michelin star, and is a hooper.  The lab also let him win at minigolf and bowling. </p>
+                <p class="member-desc">Anthony is a UConn XXX major and comes to us from the San Francisco Bay Area!  </p>
             </div>
 
             <div class="team-card">
