--- a/team.html
+++ b/team.html
@@ -61,7 +61,7 @@
                 </div>
                 <h4 class="member-name">Anthony Zuo</h4>
                 <p class="member-role">PhD Student</p>
-                <p class="member-desc">Anthony is a UConn XXX major and comes to us from the San Francisco Bay Area!</p>
+                <p class="member-desc">Anthony is a UConn Molecular & Cell Biology + Physiology & Neurobiology major and comes to us from the San Francisco Bay Area!  Anthony has a strong interest in rare diseases and works on projects related to osteogenesis imperfecta and characterizing skeletal growth.  Anthony is also an RA on campus, is working on his Michelin star, and is a hooper.  The lab also let him win at minigolf and bowling. </p>
             </div>
 
             <div class="team-card">
