--- a/team.html
+++ b/team.html
@@ -56,7 +56,7 @@
                 </div>
                 <h4 class="member-name">Jenny Alaska</h4>
                 <p class="member-role">HRP Fellow</p>
-                <p class="member-desc">Jenny is a Biomedical Engineering major at UConn in the Honors Program and grew up in southern Connecticut!  She also tutors Math at UConn as part of the Q Center, plays on the club soccer team, and working on reducing her addiction to whale tea.  In the lab Jenny studies the response of the skeleton to mechanical loading using a variety of genetic mouse models.  She recently performed an experiment on herself and is healing from ACL surgery.</p>
+                <p class="member-desc">Jenny is a Biomedical Engineering major at UConn in the Honors Program and grew up in southern Connecticut! She tutors Math at UConn through the Q Center and plays on the Women's Club Soccer team. In the lab, Jenny studies the response of the skeleton to mechanical loading using a variety of genetic mouse models. Outside of research, she is an EMT and enjoys staying active, experiences that have deepened her interest in musculoskeletal health and injury recovery.</p>
             </div>
 
             <div class="team-card alternate-hover">
