--- a/news.html
+++ b/news.html
@@ -10,7 +10,7 @@
 <body>
     <header class="navbar">
         <div class="container nav-flex">
-            <div class="logo">Sinder<span>Lab</span></div>
+            <a href="index.html" class="logo">Sinder<span>Lab</span></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -25,39 +25,21 @@
     </header>
 
     <main class="container page-content">
-        <h2 class="section-title">Lab News</h2>
-        
-        <div class="news-feed">
-            <article class="news-card">
-                <div class="news-meta">
-                    <span class="news-date">Jan 2026</span>
-                    <span class="news-tag">Grant</span>
-                </div>
-                <div class="news-body">
-                    <h3>New Funding Received</h3>
-                    <p>The Sinder Lab has received a new research grant to investigate advanced materials in joint replacement. We are currently looking for a post-doctoral fellow to lead this project.</p>
+        <h2 class="section-title" style="margin-top: 40px;">Lab News</h2>
+
+        <div class="news-list">
+            <article class="news-item">
+                <div class="news-date">January 2026</div>
+                <div class="news-content">
+                    <h3 class="news-headline">Welcome to the New Sinder Lab Website!</h3>
+                    <p>We are excited to launch our new digital home to share our research in orthopaedic outcomes and biomechanics. Stay tuned for updates on our latest projects and lab milestones.</p>
                 </div>
             </article>
-
-            <article class="news-card">
-                <div class="news-meta">
-                    <span class="news-date">Nov 2025</span>
-                    <span class="news-tag">Event</span>
-                </div>
-                <div class="news-body">
-                    <h3>ORS Annual Meeting</h3>
-                    <p>Members of the lab will be presenting three posters at the upcoming Orthopaedic Research Society (ORS) meeting. Come say hello!</p>
-                </div>
-            </article>
-
-            <article class="news-card">
-                <div class="news-meta">
-                    <span class="news-date">Sep 2025</span>
-                    <span class="news-tag">People</span>
-                </div>
-                <div class="news-body">
-                    <h3>Welcome New Residents</h3>
-                    <p>We are excited to welcome the newest cohort of Orthopaedic residents to the lab for their research rotation.</p>
+            <article class="news-item">
+                <div class="news-date">December 2025</div>
+                <div class="news-content">
+                    <h3 class="news-headline">Jenny Alaska Presents at Honors Symposium</h3>
+                    <p>Jenny shared her work on skeletal response to mechanical loading. Great job, Jenny!</p>
                 </div>
             </article>
         </div>
