--- a/news.html
+++ b/news.html
@@ -28,20 +28,37 @@
         <h2 class="section-title" style="margin-top: 40px;">Lab News</h2>
 
         <div class="news-list">
+
             <article class="news-item">
-                <div class="news-date">January 2026</div>
+                <div class="news-date">Jan 2026</div>
+                <div class="news-image">
+                    <img src="Zuo_PosterTube.jpg" alt="Anthony Zuo Award">
+                </div>
                 <div class="news-content">
-                    <h3 class="news-headline">Welcome to the New Sinder Lab Website!</h3>
-                    <p>We are excited to launch our new digital home to share our research in orthopaedic outcomes and biomechanics. Stay tuned for updates on our latest projects and lab milestones.</p>
+                    <h3 class="news-headline">Anthony Zuo Presents at Regional Conference</h3>
+                    <p>Congratulations to Anthony Zuo for his successful poster presentation! His work on characterizing skeletal growth in rare disease models received significant interest from the orthopaedic research community.</p>
                 </div>
             </article>
+
             <article class="news-item">
-                <div class="news-date">December 2025</div>
+                <div class="news-date">Dec 2025</div>
+                <div class="news-image">
+                    <img src="JennyAlaska_Peru.JPG" alt="Jenny Alaska Research">
+                </div>
                 <div class="news-content">
-                    <h3 class="news-headline">Jenny Alaska Presents at Honors Symposium</h3>
-                    <p>Jenny shared her work on skeletal response to mechanical loading. Great job, Jenny!</p>
+                    <h3 class="news-headline">Jenny Alaska Completes Biomechanics Pilot Study</h3>
+                    <p>Jenny has successfully wrapped up the first phase of our study on mechanical loading responses. Her findings provide a foundation for our upcoming project on fracture healing timelines.</p>
                 </div>
             </article>
+
+            <article class="news-item">
+                <div class="news-date">Nov 2025</div>
+                <div class="news-content">
+                    <h3 class="news-headline">Sinder Lab Website Launch</h3>
+                    <p>We are officially live! Our new website will serve as a hub for our latest publications, research findings, and team updates. Check back often for new developments in orthopaedic biomechanics.</p>
+                </div>
+            </article>
+
         </div>
     </main>
 
