--- a/news.html
+++ b/news.html
@@ -31,8 +31,8 @@
 
             <article class="news-item">
                 <div class="news-date">Jan 2026</div>
-                <div class="news-image">
-                    <img src="Zuo_PosterTube.jpg" alt="Anthony Zuo Award">
+                <div class="news-image news-image-sm">
+                    <img src="anthonyzuo_headshot.jpg" alt="Anthony Zuo">
                 </div>
                 <div class="news-content">
                     <h3 class="news-headline">Anthony Zuo Presents at Regional Conference</h3>
@@ -42,9 +42,6 @@
 
             <article class="news-item">
                 <div class="news-date">Dec 2025</div>
-                <div class="news-image">
-                    <img src="JennyAlaska_Peru.JPG" alt="Jenny Alaska Research">
-                </div>
                 <div class="news-content">
                     <h3 class="news-headline">Jenny Alaska Completes Biomechanics Pilot Study</h3>
                     <p>Jenny has successfully wrapped up the first phase of our study on mechanical loading responses. Her findings provide a foundation for our upcoming project on fracture healing timelines.</p>
