--- a/news.html
+++ b/news.html
@@ -31,9 +31,14 @@
 
             <article class="news-item">
                 <div class="news-date">Jan 2026</div>
-                <div class="news-image news-image-sm">
-                    <img src="anthonyzuo_headshot.jpg" alt="Anthony Zuo">
-                </div>
+                
+                <a href="anthonyzuo_headshot.jpg" target="_blank" class="news-img-link">
+                    <div class="news-img-frame">
+                        <img src="anthonyzuo_headshot.jpg" alt="Anthony Zuo" class="news-img-static">
+                    </div>
+                    <span class="enlarge-text">Click to enlarge</span>
+                </a>
+
                 <div class="news-content">
                     <h3 class="news-headline">Anthony Zuo Presents at Regional Conference</h3>
                     <p>Congratulations to Anthony Zuo for his successful poster presentation! His work on characterizing skeletal growth in rare disease models received significant interest from the orthopaedic research community.</p>
