--- a/news.html
+++ b/news.html
@@ -26,22 +26,18 @@
 
     <main class="container page-content">
         <h2 class="section-title" style="margin-top: 40px;">Lab News</h2>
-
         <div class="news-list">
-
             <article class="news-item">
                 <div class="news-date">Jan 2026</div>
-                
-                <a href="anthonyzuo_headshot.jpg" target="_blank" class="news-img-link">
+                <a href="anthonyzuo_headshot.jpg" class="news-img-link enlarge-trigger">
                     <div class="news-img-frame">
                         <img src="anthonyzuo_headshot.jpg" alt="Anthony Zuo" class="news-img-static">
                     </div>
                     <span class="enlarge-text">Click to enlarge</span>
                 </a>
-
                 <div class="news-content">
                     <h3 class="news-headline">Anthony Zuo Presents at Regional Conference</h3>
-                    <p>Congratulations to Anthony Zuo for his successful poster presentation! His work on characterizing skeletal growth in rare disease models received significant interest from the orthopaedic research community.</p>
+                    <p>Congratulations to Anthony Zuo for his successful poster presentation! His work on characterizing skeletal growth in rare disease models received significant interest.</p>
                 </div>
             </article>
 
@@ -49,25 +45,29 @@
                 <div class="news-date">Dec 2025</div>
                 <div class="news-content">
                     <h3 class="news-headline">Jenny Alaska Completes Biomechanics Pilot Study</h3>
-                    <p>Jenny has successfully wrapped up the first phase of our study on mechanical loading responses. Her findings provide a foundation for our upcoming project on fracture healing timelines.</p>
+                    <p>Jenny has successfully wrapped up the first phase of our study on mechanical loading responses.</p>
                 </div>
             </article>
-
-            <article class="news-item">
-                <div class="news-date">Nov 2025</div>
-                <div class="news-content">
-                    <h3 class="news-headline">Sinder Lab Website Launch</h3>
-                    <p>We are officially live! Our new website will serve as a hub for our latest publications, research findings, and team updates. Check back often for new developments in orthopaedic biomechanics.</p>
-                </div>
-            </article>
-
         </div>
     </main>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2026 Sinder Lab | Department of Orthopaedics</p>
-        </div>
-    </footer>
+    <div id="imageModal" class="modal">
+        <img class="modal-content" id="img01">
+    </div>
+
+    <script>
+        const modal = document.getElementById("imageModal");
+        const modalImg = document.getElementById("img01");
+
+        document.querySelectorAll('.enlarge-trigger').forEach(link => {
+            link.onclick = function(e) {
+                e.preventDefault();
+                modal.style.display = "flex";
+                modalImg.src = this.href;
+            }
+        });
+
+        modal.onclick = function() { modal.style.display = "none"; }
+    </script>
 </body>
 </html>
