--- a/publications.html
+++ b/publications.html
@@ -25,52 +25,57 @@
     </header>
 
     <main class="container page-content">
-        <div class="pub-header">
+        <div class="pub-header" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 40px; border-bottom: 2px solid var(--border); padding-bottom: 20px;">
             <h2 class="section-title" style="margin: 0;">Selected Publications</h2>
-            <a href="https://scholar.google.com/citations?user=LqYNGrAAAAAJ&hl=en" target="_blank" class="scholar-btn">
+            <a href="https://scholar.google.com/citations?user=LqYNGrAAAAAJ&hl=en" target="_blank" class="scholar-btn" style="text-decoration: none; color: var(--accent); font-weight: 700; font-size: 0.9rem;">
                 View on Google Scholar →
             </a>
         </div>
 
         <div class="publications-list">
             
-            <div class="pub-entry-tight">
-                <div class="pub-title-grey"><strong>Parathyroid hormone and trabectedin have differing effects on macrophages and stress fracture repair</strong></div>
+            <div class="pub-item">
+                <div class="pub-title-grey">Parathyroid hormone and trabectedin have differing effects on macrophages and stress fracture repair</div>
                 <div class="pub-citation">
-                    Zweifler LE, <strong>Sinder BP</strong>, Stephan C, Koh AJ, Do J, Ulrich E, Jobanpreet G, Woo C, Batoon L, Kozloff KM, Roca H, Mishina Y, McCauley LK. <em>Bone</em>. 2024.<br>
-                    <a href="https://pubmed.ncbi.nlm.nih.gov/38013019/" target="_blank" class="pubmed-link">PubMed</a>
+                    Zweifler LE, <strong>Sinder BP</strong>, Stephan C, Koh AJ, Do J, Ulrich E, Jobanpreet G, Woo C, Batoon L, Kozloff KM, Roca H, Mishina Y, McCauley LK. <em>Bone</em>. 2024.
+                    <br>
+                    <a href="https://pubmed.ncbi.nlm.nih.gov/38013019/" target="_blank" class="pubmed-link" style="color: var(--accent); font-size: 0.85rem; font-weight: 600; text-decoration: none;">[PubMed]</a>
                 </div>
             </div>
 
-            <div class="pub-entry-tight">
-                <div class="pub-title-grey"><strong>Engraftment of skeletal progenitor cells by bone-directed transplantation improves osteogenesis imperfecta murine bone phenotype</strong></div>
+            <div class="pub-item">
+                <div class="pub-title-grey">Engraftment of skeletal progenitor cells by bone-directed transplantation improves osteogenesis imperfecta murine bone phenotype</div>
                 <div class="pub-citation">
-                    <strong>Sinder BP</strong>, Novak S, Wee NKY, Basile M, Maye P, Matthews BG, Kalajzic I. <em>Stem Cells</em>. 2020.<br>
-                    <a href="https://pubmed.ncbi.nlm.nih.gov/31859429/" target="_blank" class="pubmed-link">PubMed</a>
+                    <strong>Sinder BP</strong>, Novak S, Wee NKY, Basile M, Maye P, Matthews BG, Kalajzic I. <em>Stem Cells</em>. 2020.
+                    <br>
+                    <a href="https://pubmed.ncbi.nlm.nih.gov/31859429/" target="_blank" class="pubmed-link" style="color: var(--accent); font-size: 0.85rem; font-weight: 600; text-decoration: none;">[PubMed]</a>
                 </div>
             </div>
 
-            <div class="pub-entry-tight">
-                <div class="pub-title-grey"><strong>Bone mass is compromised by the chemotherapeutic trabectedin in association with effects on osteoblasts and macrophage efferocytosis</strong></div>
+            <div class="pub-item">
+                <div class="pub-title-grey">Bone mass is compromised by the chemotherapeutic trabectedin in association with effects on osteoblasts and macrophage efferocytosis</div>
                 <div class="pub-citation">
-                    <strong>Sinder BP</strong>, Zweifler L, Koh AJ, Michalski MN, Hofbauer LC, Aguirre JI, Roca H, McCauley LK.  <em>Journal of Bone and Mineral Research</em>. 2017.<br>
-                    <a href="https://pubmed.ncbi.nlm.nih.gov/28600866/" target="_blank" class="pubmed-link">PubMed</a>
+                    <strong>Sinder BP</strong>, Zweifler L, Koh AJ, Michalski MN, Hofbauer LC, Aguirre JI, Roca H, McCauley LK. <em>Journal of Bone and Mineral Research</em>. 2017.
+                    <br>
+                    <a href="https://pubmed.ncbi.nlm.nih.gov/28600866/" target="_blank" class="pubmed-link" style="color: var(--accent); font-size: 0.85rem; font-weight: 600; text-decoration: none;">[PubMed]</a>
                 </div>
             </div>
 
-            <div class="pub-entry-tight">
-                <div class="pub-title-grey"><strong>Effect of anti-sclerostin therapy and osteogenesis imperfecta on tissue-level properties in growing and adult mice while controlling for tissue age</strong></div>
+            <div class="pub-item">
+                <div class="pub-title-grey">Effect of anti-sclerostin therapy and osteogenesis imperfecta on tissue-level properties in growing and adult mice while controlling for tissue age</div>
                 <div class="pub-citation">
-                    <strong>Sinder BP</strong>, Lloyd WR, Salemi JD, Marini JC, Caird MS, Morris MD, Kozloff KM. <em>Bone</em>. 2016.<br>
-                    <a href="https://pubmed.ncbi.nlm.nih.gov/26769006/" target="_blank" class="pubmed-link">PubMed</a>
+                    <strong>Sinder BP</strong>, Lloyd WR, Salemi JD, Marini JC, Caird MS, Morris MD, Kozloff KM. <em>Bone</em>. 2016.
+                    <br>
+                    <a href="https://pubmed.ncbi.nlm.nih.gov/26769006/" target="_blank" class="pubmed-link" style="color: var(--accent); font-size: 0.85rem; font-weight: 600; text-decoration: none;">[PubMed]</a>
                 </div>
             </div>
 
-            <div class="pub-entry-tight">
-                <div class="pub-title-grey"><strong>Rapidly growing Brtl/+ mouse model of osteogenesis imperfecta improves bone mass and strength with sclerostin antibody treatment</strong></div>
+            <div class="pub-item">
+                <div class="pub-title-grey">Rapidly growing Brtl/+ mouse model of osteogenesis imperfecta improves bone mass and strength with sclerostin antibody treatment</div>
                 <div class="pub-citation">
-                    <strong>Sinder BP</strong>, Salemi JD, Ominsky MS, Caird MS, Marini JC, Kozloff KM. <em>Bone</em>. 2015.<br>
-                    <a href="https://pubmed.ncbi.nlm.nih.gov/25445450/" target="_blank" class="pubmed-link">PubMed</a>
+                    <strong>Sinder BP</strong>, Salemi JD, Ominsky MS, Caird MS, Marini JC, Kozloff KM. <em>Bone</em>. 2015.
+                    <br>
+                    <a href="https://pubmed.ncbi.nlm.nih.gov/25445450/" target="_blank" class="pubmed-link" style="color: var(--accent); font-size: 0.85rem; font-weight: 600; text-decoration: none;">[PubMed]</a>
                 </div>
             </div>
 
@@ -79,7 +84,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2026 Sinder Lab | UConn Health Department of Orthopaedic Surgery</p>
+            <p>&copy; 2026 Sinder Lab | UConn Health Department of Orthopaedic Surgery</p>
         </div>
     </footer>
 </body>
