--- a/publications.html
+++ b/publications.html
@@ -38,6 +38,8 @@
                 <div class="pub-title-bold-grey">Parathyroid hormone and trabectedin have differing effects on macrophages and stress fracture repair</div>
                 <div class="pub-citation">
                     Zweifler LE, <strong>Sinder BP</strong>, Stephan C, Koh AJ, Do J, Ulrich E, Jobanpreet G, Woo C, Batoon L, Kozloff KM, Roca H, Mishina Y, McCauley LK. <em>Bone</em>. 2024.
+                </div>
+                <div class="pub-link-wrapper">
                     <a href="https://pubmed.ncbi.nlm.nih.gov/38013019/" target="_blank" class="pm-link">[PubMed]</a>
                 </div>
             </div>
@@ -46,6 +48,8 @@
                 <div class="pub-title-bold-grey">Engraftment of skeletal progenitor cells by bone-directed transplantation improves osteogenesis imperfecta murine bone phenotype</div>
                 <div class="pub-citation">
                     <strong>Sinder BP</strong>, Novak S, Wee NKY, Basile M, Maye P, Matthews BG, Kalajzic I. <em>Stem Cells</em>. 2020.
+                </div>
+                <div class="pub-link-wrapper">
                     <a href="https://pubmed.ncbi.nlm.nih.gov/31859429/" target="_blank" class="pm-link">[PubMed]</a>
                 </div>
             </div>
@@ -54,6 +58,8 @@
                 <div class="pub-title-bold-grey">Bone mass is compromised by the chemotherapeutic trabectedin in association with effects on osteoblasts and macrophage efferocytosis</div>
                 <div class="pub-citation">
                     <strong>Sinder BP</strong>, Zweifler L, Koh AJ, Michalski MN, Hofbauer LC, Aguirre JI, Roca H, McCauley LK. <em>Journal of Bone and Mineral Research</em>. 2017.
+                </div>
+                <div class="pub-link-wrapper">
                     <a href="https://pubmed.ncbi.nlm.nih.gov/28600866/" target="_blank" class="pm-link">[PubMed]</a>
                 </div>
             </div>
@@ -62,6 +68,8 @@
                 <div class="pub-title-bold-grey">Effect of anti-sclerostin therapy and osteogenesis imperfecta on tissue-level properties in growing and adult mice while controlling for tissue age</div>
                 <div class="pub-citation">
                     <strong>Sinder BP</strong>, Lloyd WR, Salemi JD, Marini JC, Caird MS, Morris MD, Kozloff KM. <em>Bone</em>. 2016.
+                </div>
+                <div class="pub-link-wrapper">
                     <a href="https://pubmed.ncbi.nlm.nih.gov/26769006/" target="_blank" class="pm-link">[PubMed]</a>
                 </div>
             </div>
@@ -70,6 +78,8 @@
                 <div class="pub-title-bold-grey">Rapidly growing Brtl/+ mouse model of osteogenesis imperfecta improves bone mass and strength with sclerostin antibody treatment</div>
                 <div class="pub-citation">
                     <strong>Sinder BP</strong>, Salemi JD, Ominsky MS, Caird MS, Marini JC, Kozloff KM. <em>Bone</em>. 2015.
+                </div>
+                <div class="pub-link-wrapper">
                     <a href="https://pubmed.ncbi.nlm.nih.gov/25445450/" target="_blank" class="pm-link">[PubMed]</a>
                 </div>
             </div>
