--- a/news.html
+++ b/news.html
@@ -76,6 +76,7 @@
             }
         });
 
+        // Close when clicking anywhere on the background
         modal.onclick = function() { modal.style.display = "none"; }
     </script>
 </body>
