--- a/news.html
+++ b/news.html
@@ -51,6 +51,33 @@
                 </div>
             </article>
 
+             <article class="news-item">
+                <div class="news-date">Sept 2024</div>
+                <div class="news-content">
+                    <h3 class="news-headline"> Lab attends ASBMR in Toronto.  Good science and good colleagues come together.  </h3>
+                    <p>Jenny has successfully wrapped up the first phase of our study on mechanical loading responses. This pilot data will be instrumental for our upcoming grant applications.</p>
+                </div>
+            </article>
+
+
+         <article class="news-item">
+                <div class="news-date">July 2024</div>
+                <div class="news-content">
+                    <h3 class="news-headline"> Presentation of successful HRP research projects!  </h3>
+                    <p>Jenny has successfully wrapped up the first phase of our study on mechanical loading responses. This pilot data will be instrumental for our upcoming grant applications.</p>
+                </div>
+            </article>
+            
+         <article class="news-item">
+                <div class="news-date">May 2024</div>
+                <div class="news-content">
+                    <h3 class="news-headline">Anthony and Jenny Join the Lab as HRP Students!  </h3>
+                    <p>Jenny has successfully wrapped up the first phase of our study on mechanical loading responses. This pilot data will be instrumental for our upcoming grant applications.</p>
+                </div>
+            </article>
+
+
+
         </div>
     </main>
 
