--- a/news.html
+++ b/news.html
@@ -54,8 +54,8 @@
              <article class="news-item">
                 <div class="news-date">Sept 2024</div>
                 <div class="news-content">
-                    <h3 class="news-headline"> Lab attends ASBMR in Toronto.  Good science and good colleagues come together.  </h3>
-                    <p>Jenny has successfully wrapped up the first phase of our study on mechanical loading responses. This pilot data will be instrumental for our upcoming grant applications.</p>
+                    <h3 class="news-headline"> Lab attends ASBMR in Toronto.  </h3>
+                    <p> Good science and good colleagues come together.  </p>
                 </div>
             </article>
 
