--- a/news.html
+++ b/news.html
@@ -51,6 +51,15 @@
                 </div>
             </article>
 
+            
+            <article class="news-item">
+                <div class="news-date"> May 2025</div>
+                <div class="news-content">
+                    <h3 class="news-headline">Run it back</h3>
+                    <p> Jenny and Anthony are back in the lab full time for Another summer!  </p>
+                </div>
+            </article>
+
              <article class="news-item">
                 <div class="news-date">Sept 2024</div>
                 <div class="news-content">
@@ -64,7 +73,7 @@
                 <div class="news-date">July 2024</div>
                 <div class="news-content">
                     <h3 class="news-headline"> Presentation of successful HRP research projects!  </h3>
-                    <p>Jenny has successfully wrapped up the first phase of our study on mechanical loading responses. This pilot data will be instrumental for our upcoming grant applications.</p>
+                    <p> Poster presentation at the conclusion of HRP program. </p>
                 </div>
             </article>
             
@@ -72,7 +81,7 @@
                 <div class="news-date">May 2024</div>
                 <div class="news-content">
                     <h3 class="news-headline">Anthony and Jenny Join the Lab as HRP Students!  </h3>
-                    <p>Jenny has successfully wrapped up the first phase of our study on mechanical loading responses. This pilot data will be instrumental for our upcoming grant applications.</p>
+                    <p> Jennifer Alaska and Anthony Zuo join the lab as undergrads from UConn as part of the HRP research program! </p>
                 </div>
             </article>
 
