--- a/news.html
+++ b/news.html
@@ -86,14 +86,14 @@
         <p>Poster presentation at the conclusion of HRP program.</p>
         
         <div style="display: flex; gap: 15px; margin-top: 15px;">
-            <a href="HRP_2024_01.jpg" class="news-img-link enlarge-trigger">
+            <a href="HRP_2024_01_compress.jpeg" class="news-img-link enlarge-trigger">
                 <div class="news-img-frame">
-                    <img src="HRP_2024_01.jpg" alt="HRP Project 1" class="news-img-static">
+                    <img src="HRP_2024_01_compress.jpeg" alt="HRP Project 1" class="news-img-static">
                 </div>
             </a>
-            <a href="HRP_2024_02.jpg" class="news-img-link enlarge-trigger">
+            <a href="HRP_2024_02_compress.jpeg" class="news-img-link enlarge-trigger">
                 <div class="news-img-frame">
-                    <img src="HRP_2024_02.jpg" alt="HRP Project 2" class="news-img-static">
+                    <img src="HRP_2024_02_compress.jpeg" alt="HRP Project 2" class="news-img-static">
                 </div>
             </a>
         </div>
