--- a/news.html
+++ b/news.html
@@ -83,7 +83,7 @@
     <div class="news-date">July 2024</div>
     <div class="news-content">
         <h3 class="news-headline">Presentation of successful HRP research projects!</h3>
-        <p>Poster presentation at the conclusion of HRP program.</p>
+        <p>Jenny and Anthony give great presentations of their summer projects and talk us all into going bowling to celebrate with the Rux lab </p>
         
         <div style="display: flex; gap: 15px; margin-top: 15px;">
             <a href="HRP_2024_01_compress.jpeg" class="news-img-link enlarge-trigger">
