--- a/news.html
+++ b/news.html
@@ -52,10 +52,23 @@
             </article>
 
             <article class="news-item">
-                <div class="news-date">June 2025</div>
+                <div class="news-date">July 2025</div>
                 <div class="news-content">
                     <h3 class="news-headline">Run it back</h3>
                     <p>Jenny and Anthony are back in the lab full time for another summer!</p>
+
+                       <div style="display: flex; gap: 15px; margin-top: 15px;">
+            <a href="2025_lunch_compress.jpeg" class="news-img-link enlarge-trigger">
+                <div class="news-img-frame">
+                    <img src="2025_lunch_compress.jpeg" alt="2025 summer 1" class="news-img-static">
+                </div>
+            </a>
+            <a href="2025_icecream_compress.jpeg" class="news-img-link enlarge-trigger">
+                <div class="news-img-frame">
+                    <img src="2025_icecream_compress.jpeg" alt="2025 summer 2" class="news-img-static">
+                </div>
+            </a>
+        </div>
                 </div>
             </article>
 
