--- a/news.html
+++ b/news.html
@@ -113,7 +113,7 @@
     </div>
 </article>
 
-                           <article class="news-item">
+    <article class="news-item">
     <div class="news-date">June 2024</div>
     <div class="news-content">
         <h3 class="news-headline">Jerkwater Town… </h3>
@@ -122,12 +122,12 @@
         <div style="display: flex; gap: 15px; margin-top: 15px;">
             <a href=“jerkwater_01_compress.jpeg” class="news-img-link enlarge-trigger">
                 <div class="news-img-frame">
-                    <img src=“”jerkwater_01_compress.jpeg” alt=“jerkwater 1" class="news-img-static">
+                    <img src="jerkwater_01_compress.jpeg” alt=“jerkwater 1" class="news-img-static">
                 </div>
             </a>
             <a href=“jerkwater_02_compress.jpeg” class="news-img-link enlarge-trigger">
                 <div class="news-img-frame">
-                    <img src=“jerkwater_02_compress.jpeg alt="jerkwater 2" class="news-img-static">
+                    <img src=“jerkwater_02_compress.jpeg" alt="jerkwater 2" class="news-img-static">
                 </div>
             </a>
         </div>
