--- a/news.html
+++ b/news.html
@@ -73,26 +73,34 @@
             </article>
 
 
-            <article class="news-item">
-                <div class="news-date">March 2025</div>
-                <div class="news-content">
-                    <h3 class="news-headline">Autoclave and Cold Room Broker Deal to Never Function Simultaneously</h3>
-                    <p> After 2 years, the cold room has been fixed!!!  However, and so as not to violate Newton’s law of lab equipment, the autoclave in the building is now broken.  Fortunately, we can build on training with the milliQ last summer.</p>
+<article class="news-item">
+    <div class="news-date">March 2025</div>
+    <div class="news-content">
+        <h3 class="news-headline">Autoclave and Cold Room Broker Deal to Never Function Simultaneously</h3>
+        <p>After 2 years, the cold room has been fixed!!! However, and so as not to violate Newton’s law of lab equipment, the autoclave in the building is now broken. Fortunately, we can build on training with the milliQ last summer.</p>
 
-                       <div style="display: flex; gap: 15px; margin-top: 15px;">
+        <div style="display: flex; gap: 15px; margin-top: 15px; align-items: flex-start;">
             <a href="autoclave_01_compress.jpeg" class="news-img-link enlarge-trigger">
                 <div class="news-img-frame">
                     <img src="autoclave_01_compress.jpeg" alt="autoclave 1" class="news-img-static">
                 </div>
             </a>
+
             <a href="autoclave_03_compress.jpeg" class="news-img-link enlarge-trigger">
                 <div class="news-img-frame">
                     <img src="autoclave_03_compress.jpeg" alt="autoclave 2" class="news-img-static">
                 </div>
             </a>
+
+            <div class="news-img-frame">
+                <video controls style="width: 100%; height: 100%; object-fit: cover; display: block; border-radius: 8px;">
+                    <source src="autoclave_02_compress.mov" type="video/quicktime">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
         </div>
-                </div>
-            </article>
+    </div>
+</article>
 
             
         <article class="news-item">
