--- a/news.html
+++ b/news.html
@@ -92,14 +92,14 @@
                 </div>
             </a>
 
-<div class="news-img-frame">
-    <video controls playsinline preload="metadata" style="width: 100%; height: 100%; object-fit: cover; display: block; border-radius: 8px;">
-        <source src="autoclave_02_compress.mov" type="video/quicktime">
-        <source src="autoclave_02_compress.mov" type="video/mp4"> 
-        Your browser does not support the video tag.
-    </video>
-</div>
-            </div>
+            <a href="autoclave_02_compress.mov" class="news-img-link video-trigger">
+                <div class="news-img-frame" style="position: relative; background: #000;">
+                    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; font-size: 30px; z-index: 2; opacity: 0.8;">▶</div>
+                    <video style="width: 100%; height: 100%; object-fit: cover; opacity: 0.6;">
+                        <source src="autoclave_02_compress.mov#t=0.1" type="video/quicktime">
+                    </video>
+                </div>
+            </a>
         </div>
     </div>
 </article>
