--- a/news.html
+++ b/news.html
@@ -77,7 +77,7 @@
     <div class="news-date">April 2025</div>
     <div class="news-content">
         <h3 class="news-headline">Autoclave and Cold Room Broker Deal to Never Function Simultaneously</h3>
-        <p>After 2 years, the cold room has been fixed!!! However, and so as not to violate Newton’s law of lab equipment, the autoclave in the building is now broken. Fortunately, we can build on training with the milliQ last summer.</p>
+        <p>After 2 years, the cold room has been fixed!!! However, and so as not to violate Newton’s law of lab equipment, the autoclave in the building is now broken. Fortunately, we can build on our significant training with the milliQ last summer.</p>
 
         <div style="display: flex; gap: 15px; margin-top: 15px; align-items: flex-start;">
             <a href="autoclave_01_compress.jpeg" class="news-img-link enlarge-trigger">
