--- a/news.html
+++ b/news.html
@@ -108,7 +108,7 @@
         <article class="news-item">
     <div class="news-date">Sept 2024</div>
     <div class="news-content">
-        <h3 class="news-headline">Lab attends ASBMR in Toronto</h3>
+        <h3 class="news-headline">Lab attends ASBMR Meeting in Toronto</h3>
         <p>Good science and good colleagues come together.</p>
         
         <div style="display: flex; gap: 15px; margin-top: 15px;">
