--- a/research.html
+++ b/research.html
@@ -72,7 +72,7 @@
             </article>
 
             <article class="research-item">
-                <img src="growth.jpg" alt="Skeletal Growth Modeling" class="research-img-large">
+                <img src="Growth_01.jpg" alt="Skeletal Growth Modeling" class="research-img-large">
                 <div class="research-text">
                     <span class="tag">Developmental</span>
                     <h3 style="font-size: 1.8rem; margin: 10px 0;">Skeletal Modeling During Growth</h3>
