--- a/research.html
+++ b/research.html
@@ -54,7 +54,7 @@
         <div class="research-list">
             
             <article class="research-item">
-                <img src="mechanics.jpg" alt="Bone Mechanical Loading" class="research-img-large">
+                <img src="young_sinder_01.jpg" alt="Bone Mechanical Loading" class="research-img-large">
                 <div class="research-text">
                     <span class="tag">Biomechanics</span>
                     <h3 style="font-size: 1.8rem; margin: 10px 0;">The Response of the Skeleton to Mechanical Load</h3>
