--- a/research.html
+++ b/research.html
@@ -78,7 +78,7 @@
             
             <article class="research-item">
                 <div class="research-header">
-                    <span class="tag">Biomechanics</span>
+                    <span class="tag">Mechanoresponse and Biomechanics</span>
                     <h3 class="research-headline">The Response of the Skeleton to Mechanical Load</h3>
                 </div>
                 <img src="cortical_01.jpg" alt="Bone Mechanical Loading" class="research-img-large">
