--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 
         <section class="join-us">
             <h3>Prospective Students & Residents</h3>
-            <p>We are always looking for motivated researchers to join the Sinder Lab at UConn Health. Please email your CV and a brief statement of interest to Dr. Sinder at the address shown above.</p>
+            <p>We are always looking for motivated researchers to join the Sinder Lab at UConn Health. Please email your resume/CV and a brief statement of interest to Dr. Sinder at the address shown above.</p>
         </section>
     </main>
 
